installed and ran prettier.

--- a/src/content/docs/development/boba-backend/apis/intro.mdx
+++ b/src/content/docs/development/boba-backend/apis/intro.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 1
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 Application Programming Interfaces (APIs) allow applications (clients) to
 request data or actions from other applications (servers), without being given
@@ -92,8 +92,8 @@ BobaBoard's API, the responses are returned in the
 
 <Aside type="danger">
 
-**The following examples do not reflect how boba-backend works in practice**, and
-are just meant to help understand REST APIs.
+**The following examples do not reflect how boba-backend works in practice**,
+and are just meant to help understand REST APIs.
 
 The source of truth for the boba-backend API is our
 [REST API documentation page](/docs/development/rest-api/).
