--- a/src/content/docs/development/boba-backend/backend-development-outline.mdx
+++ b/src/content/docs/development/boba-backend/backend-development-outline.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 2
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 While every feature is unique, developing on boba backend usually involves
 changes to one or more of these entities:
@@ -98,6 +98,7 @@ needed, and come back once you're unblocked.
    gated on special conditions (e.g. the user being logged in or a permission
    existing), add the necessary middleware to the endpoint. See
    [Checking permissions](docs/development/boba-backend/permissions/check-permissions).
+
    <u>Make sure to also update tests</u> to check the correct HTTP status codes
    are returned.
 
