--- a/src/content/docs/development/boba-backend/using-postman.mdx
+++ b/src/content/docs/development/boba-backend/using-postman.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 7
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 You can send complex HTTP requests to the backend server using the
 [Postman API client](https://www.postman.com/product/api-client/). You can
