--- a/src/content/docs/development/boba-docs.mdx
+++ b/src/content/docs/development/boba-docs.mdx
@@ -23,9 +23,9 @@ Docusaurus separates site content into four folders:
 
 ## boba-docs Folder Structure
 
-All the documentation pages in boba-docs are stored in the `docs` folder as `.md`
-files. In `docs`, there are four folders, each of which correspond to one of the
-guides on boba-docs as shown below:
+All the documentation pages in boba-docs are stored in the `docs` folder as
+`.md` files. In `docs`, there are four folders, each of which correspond to one
+of the guides on boba-docs as shown below:
 
 ![a screenshot of the git repo compared to the top navbar on boba-docs. lines are drawn between items with similar names](../../../assets/img/volunteer/bobadocsnav4.jpg)
 
