--- a/src/content/docs/development/boba-editor/overview.mdx
+++ b/src/content/docs/development/boba-editor/overview.mdx
@@ -7,5 +7,6 @@ sidebar:
 boba-editor is BobaBoard's text editor. It's based on
 [QuillJS](https://www.quilljs.com).
 
-boba-editor's input/output format is the [QuillJS Delta](./the-delta-format.mdx),
-which should only be handled through boba-editor's exported methods.
+boba-editor's input/output format is the
+[QuillJS Delta](./the-delta-format.mdx), which should only be handled through
+boba-editor's exported methods.
