--- a/src/content/docs/development/boba-frontend/compount-components.mdx
+++ b/src/content/docs/development/boba-frontend/compount-components.mdx
@@ -2,7 +2,7 @@
 title: Compound Components
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 Compound components are a common React design pattern where a component (the
 parent) also defines other subcomponents (its children) as part of its
