--- a/src/content/docs/development/contribute/boba-components.mdx
+++ b/src/content/docs/development/contribute/boba-components.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 6
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 \[[code](https://github.com/BobaBoard/boba-components),
 [demo](https://bobaboard-ui.netlify.app/)]
@@ -92,8 +92,8 @@ boba-editor as part of updating boba-components.
 
    <Aside type="danger">
 
-   If you install boba-editor _within_ boba-components, you're going to have a bad
-   time.
+   If you install boba-editor _within_ boba-components, you're going to have a
+   bad time.
 
    </Aside>
 
@@ -139,8 +139,8 @@ boba-editor as part of updating boba-components.
    <Aside type="tip">
 
    If you make changes to boba-editor and want to see them reflected in
-   boba-components, run `yarn run build` in the boba-editor folder. boba-components
-   should pick up the changes.
+   boba-components, run `yarn run build` in the boba-editor folder.
+   boba-components should pick up the changes.
 
    </Aside>
 
