--- a/src/content/docs/development/contribute/boba-editor.mdx
+++ b/src/content/docs/development/contribute/boba-editor.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 7
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 \[[code](https://github.com/BobaBoard/boba-editor),
 [demo](https://boba-editor.netlify.app/?path=/story/editor-preview--simple-editor)]
