--- a/src/content/docs/development/contribute/wsl.mdx
+++ b/src/content/docs/development/contribute/wsl.mdx
@@ -130,9 +130,9 @@ There are two ways to access your WSL terminal:
    "Debian on Windows").
 
 2. If you have Windows Terminal open already, click the
-   <Icon name="down-caret" class="inline-icon" /> to access the dropdown menu and
-   display the profiles you can open. Then select Ubuntu or your Linux distro from
-   the list.
+   <Icon name="down-caret" class="inline-icon" /> to access the dropdown menu
+   and display the profiles you can open. Then select Ubuntu or your Linux
+   distro from the list.
 
 ![](../../../../assets/img/development/wsl/powershell_profiles.png)
 ![](../../../../assets/img/development/wsl/powershell_wsl_tab.png)
