--- a/src/content/docs/development/intro.mdx
+++ b/src/content/docs/development/intro.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 1
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 BobaBoard's codebase is split within 4 separate repositories, each with its own
 purpose and set of technologies:
