--- a/src/content/docs/development/legacy-pages/bobaeditor-codebase-guide.mdx
+++ b/src/content/docs/development/legacy-pages/bobaeditor-codebase-guide.mdx
@@ -9,8 +9,8 @@ For installation instructions check out
 
 ## Overview
 
-The [boba-editor Codebase](https://github.com/BobaBoard/boba-editor) contains all
-code pertaining to BobaBoard's text editing capabilities
+The [boba-editor Codebase](https://github.com/BobaBoard/boba-editor) contains
+all code pertaining to BobaBoard's text editing capabilities
 ([see demo](https://boba-editor.netlify.app/)). It's written in Typescript and
 React.
 
