--- a/src/content/docs/development/legacy-pages/git-notes.mdx
+++ b/src/content/docs/development/legacy-pages/git-notes.mdx
@@ -100,12 +100,12 @@ PC is your `local`.\*\*\*\*
 
 <Aside type="note">
 
-Uhm. What's the point of all this? Glad you asked! The point of
-**forking** a repository is being able to push (meaning upload) changes in
-isolation until you're ready to actually request the original project's owner to
-review your edits. You'll also most often find that you don't have permission to
-directly make changes to other people's repos anyway, so editing your own fork
-is the way to go.
+Uhm. What's the point of all this? Glad you asked! The point of **forking** a
+repository is being able to push (meaning upload) changes in isolation until
+you're ready to actually request the original project's owner to review your
+edits. You'll also most often find that you don't have permission to directly
+make changes to other people's repos anyway, so editing your own fork is the way
+to go.
 
 The point of **cloning** is being able to work on things on your own machine, in
 your own code editor. There's some edits that are easy to do from GitHub's web
