--- a/src/content/docs/development/testing/testing-basics.mdx
+++ b/src/content/docs/development/testing/testing-basics.mdx
@@ -2,7 +2,7 @@
 title: Testing Basics
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 Tests are code that we write, which we can run on our application code to make
 sure it's behaving as we are expecting, and that any changes we've made don't
@@ -22,10 +22,10 @@ and run the existing tests on your changes.
 
 <Aside type="tip">
 
-At the moment, there are many existing parts of the Boba codebase that
-need tests written for them. If you're a beginner looking to get involved,
-writing tests for the existing code can be a great way to get a sense of how
-things work while contributing critical infrastructure.
+At the moment, there are many existing parts of the Boba codebase that need
+tests written for them. If you're a beginner looking to get involved, writing
+tests for the existing code can be a great way to get a sense of how things work
+while contributing critical infrastructure.
 
 </Aside>
 
