--- a/src/content/docs/project/intro.mdx
+++ b/src/content/docs/project/intro.mdx
@@ -6,7 +6,9 @@ sidebar:
 
 This section serves as a guide to BobaBoard as a project. It covers:
 
-- **Features documentation:** How are BobaBoard's features supposed to behave in practice? What features do we have?
+- **Features documentation:** How are BobaBoard's features supposed to behave in
+  practice? What features do we have?
 - **Roadmap documentation:** Where are we right now? Where are we going next?
-- **Project WIPs documentation:** Brainstorming ideas for new features, and documenting the choices (and the progress) made!
+- **Project WIPs documentation:** Brainstorming ideas for new features, and
+  documenting the choices (and the progress) made!
 - Miscellaneous documents produced
