--- a/src/content/docs/project/roadmap/priorities-and-status.mdx
+++ b/src/content/docs/project/roadmap/priorities-and-status.mdx
@@ -4,47 +4,61 @@ sidebar:
   order: 1
 ---
 
-inspiration: https://docs.oscollective.org/guides/marketing-publicity-roadmaps-and-comms#why-a-roadmap
+inspiration:
+https://docs.oscollective.org/guides/marketing-publicity-roadmaps-and-comms#why-a-roadmap
 
 _Last updated: March 23th, 2023_
 
 **Current phase:** pre-beta.
 
-This page offers a global overview of BobaBoard's current roadmap. You can also check out [our active sprints and projects](./sprints-and-projects)
-for more specific details.
+This page offers a global overview of BobaBoard's current roadmap. You can also
+check out [our active sprints and projects](./sprints-and-projects) for more
+specific details.
 
 ## Current priorities
 
-The next step in BobaBoard's journey is to leave the safe nest of a single community and broaden up our reach.
+The next step in BobaBoard's journey is to leave the safe nest of a single
+community and broaden up our reach.
 
 To do this, we're facing two major blockers:
 
-1. **Technological:** the BobaBoard software must be ready to support multiple communities coexisting
-   in the same "installation" (done ✅), and community managers must have access to a baseline level of
-   functionality that allows them to manage the community without Ms Boba's _continuous_ intervention
-   (in progress 💨).
-2. **Organizational:** the BobaBoard organization must be able to coordinate one (or more) team of
-   volunteers maintaining and extending its functionality (never "done", but encouragingly successful ✅),
-   as well as finding the right community managers to further grow the community (in progress 💨) and
-   to help us define policies and processes that reflect our values and commitments to our user base
-   (just started 🚶‍♀️).
+1. **Technological:** the BobaBoard software must be ready to support multiple
+   communities coexisting in the same "installation" (done ✅), and community
+   managers must have access to a baseline level of functionality that allows
+   them to manage the community without Ms Boba's _continuous_ intervention (in
+   progress 💨).
+2. **Organizational:** the BobaBoard organization must be able to coordinate one
+   (or more) team of volunteers maintaining and extending its functionality
+   (never "done", but encouragingly successful ✅), as well as finding the right
+   community managers to further grow the community (in progress 💨) and to help
+   us define policies and processes that reflect our values and commitments to
+   our user base (just started 🚶‍♀️).
 
-   Furthermore, the BobaBoard organization must reach some level of financial sustainability.
+   Furthermore, the BobaBoard organization must reach some level of financial
+   sustainability.
 
-Maintaining a social network is hard work, and any project is at high risk of failure or "progress stallmate"
-without a strong team (and processes) backing it. While the technological challenges are important, it's
-the organizational effort that will make or break the project.
+Maintaining a social network is hard work, and any project is at high risk of
+failure or "progress stallmate" without a strong team (and processes) backing
+it. While the technological challenges are important, it's the organizational
+effort that will make or break the project.
 
 ## Recent activities
 
-_Last updated: March 23th, 2023. [Previous update October 13th, 2022](https://github.com/BobaBoard/boba-docs/commit/2fd18c963e65a807a8c0fa743c6285dda9d70bbd)._
+_Last updated: March 23th, 2023.
+[Previous update October 13th, 2022](https://github.com/BobaBoard/boba-docs/commit/2fd18c963e65a807a8c0fa743c6285dda9d70bbd)._
 
-You can find an overview of the 2022 activities [in our current new year retrospective](https://www.bobaboard.com/blog/development-logs-10) released in March 2023.
+You can find an overview of the 2022 activities
+[in our current new year retrospective](https://www.bobaboard.com/blog/development-logs-10)
+released in March 2023.
 
 ## Next up
 
-_Last updated: March 23th, 2023. [Previous update October 13th, 2022](https://github.com/BobaBoard/boba-docs/commit/2fd18c963e65a807a8c0fa743c6285dda9d70bbd)._
+_Last updated: March 23th, 2023.
+[Previous update October 13th, 2022](https://github.com/BobaBoard/boba-docs/commit/2fd18c963e65a807a8c0fa743c6285dda9d70bbd)._
 
-You can find a broad overview of the 2023 roadmap [in the roadmap section of our current new year retrospective](https://www.bobaboard.com/blog/development-logs-10#the-2023-roadmap-part-1-main-focus-areas) released in March 2023.
+You can find a broad overview of the 2023 roadmap
+[in the roadmap section of our current new year retrospective](https://www.bobaboard.com/blog/development-logs-10#the-2023-roadmap-part-1-main-focus-areas)
+released in March 2023.
 
-For the most up-to-date information, check the [sprints and projects](./sprints-and-projects) page.
+For the most up-to-date information, check the
+[sprints and projects](./sprints-and-projects) page.
