--- a/src/content/docs/users/fandom_coders/index.mdx
+++ b/src/content/docs/users/fandom_coders/index.mdx
@@ -15,7 +15,9 @@ and maintenance easier!
 
 </Aside>
 
-{/* COMMMENTED OUT SO WE CAN MAKE LIKE ELSA ON 6/9
+{/\* COMMMENTED OUT SO WE CAN MAKE LIKE ELSA ON 6/9
+
 # How to Get An Account
+
 - Who is welcome, what people fit
-- how to get an invite. */}
+- how to get an invite. \*/}
