--- a/src/content/docs/users/fandom_coders/rules.mdx
+++ b/src/content/docs/users/fandom_coders/rules.mdx
@@ -6,14 +6,15 @@ More detailed information on the rules and posting guidelines is forthcoming!
 For now, please play by the Fandom Coder Discord server rules when testing out
 the new Realm.
 
-{/* COMMMENTED OUT SO WE CAN MAKE LIKE ELSA ON 6/9
-For the rules and culture stuff that are specific to Fandom Coders, including posting guidelines.
+{/\* COMMMENTED OUT SO WE CAN MAKE LIKE ELSA ON 6/9 For the rules and culture
+stuff that are specific to Fandom Coders, including posting guidelines.
 
 - Rules
-    - Familiarize yourself with posting guidelines.
+  - Familiarize yourself with posting guidelines.
 - Code of Conduct
-    - how to frame criticism of open source fandom projects
-        - not ascribing motives
+  - how to frame criticism of open source fandom projects
+    - not ascribing motives
 - Posting Guidelines
-    - Content Notices - Mods can add tags. Please don't be mad if we add them. If you think something needs a CN, please let the mods know here.
-- Attention Expert Coders */}
+  - Content Notices - Mods can add tags. Please don't be mad if we add them. If
+    you think something needs a CN, please let the mods know here.
+- Attention Expert Coders \*/}
