--- a/src/content/docs/users/howto/identities.mdx
+++ b/src/content/docs/users/howto/identities.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 4
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 BobaBoard assigns random identities from a shared pool of identities known as
 the [**Bobadex**](#the-bobadex) to its users. The identities are assigned when
@@ -19,10 +19,8 @@ If you comment on someone else's post, you may see that "Outdated Meme" was
 assigned to another commenter and now you have become "Bone Daddy".
 
 <blockquote>
-You do a one pull gacha per thread from a specific pool of names.
-  <cite>
-	  - Lavender Town Resident
-	</cite>
+  You do a one pull gacha per thread from a specific pool of names.
+  <cite>- Lavender Town Resident</cite>
 </blockquote>
 
 These identities remain anonymous publicly. No user can click through the
@@ -49,12 +47,14 @@ all the time?**" When you look at a post or comment you make, you will see both
 the assigned anonymous identity and your actual account avatar; that way you can
 keep track of who you are in the thread with a quick glance.
 
-<figure><img src="../../../../assets/img/userguide/youridentity.png" />
-<figcaption>Your View</figcaption>
+<figure>
+  <img src="../../../../assets/img/userguide/youridentity.png" />
+  <figcaption>Your View</figcaption>
 </figure>
 
-<figure><img src="../../../../assets/img/userguide/otherusers.png" />
-<figcaption>Another User's View</figcaption>
+<figure>
+  <img src="../../../../assets/img/userguide/otherusers.png" />
+  <figcaption>Another User's View</figcaption>
 </figure>
 
 ## Maintaining Your Anonymity
