--- a/src/content/docs/users/howto/tagging.mdx
+++ b/src/content/docs/users/howto/tagging.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 3
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 BobaBoard has four types of tags for threads. Each type of tag allows you to
 communicate additional information to readers or organize threads in a board.
