--- a/src/content/docs/users/howto/threads.mdx
+++ b/src/content/docs/users/howto/threads.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 2
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 Threads are the posts you make to a Board and all of the comments and
 contributions to the original post.
@@ -73,7 +73,10 @@ about typos and editor weirdness.
 Since BobaBoard Threads cannot be edited, you may be wondering how you can
 delete a thread.
 
-<img src="/img/userguide/youdon't.png" alt="That's the neat thing: you don't." />
+<img
+  src="/img/userguide/youdon't.png"
+  alt="That's the neat thing: you don't."
+/>
 
 Right now if you'd like to have a thread (or comment or contribution) deleted,
 please post to that effect in the thread (or underneath the
