--- a/src/content/docs/users/v0/index.mdx
+++ b/src/content/docs/users/v0/index.mdx
@@ -2,7 +2,7 @@
 title: The v0 Realm
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 <Aside type="note">
 
