--- a/src/content/docs/volunteering/coding/github/labels.mdx
+++ b/src/content/docs/volunteering/coding/github/labels.mdx
@@ -3,7 +3,7 @@ title: Issue Labels
 draft: true
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 BobaBoard uses labels to classify issues and feature requests according to a
 variety of criteria.
@@ -39,24 +39,16 @@ Click on any label to see the associated issues.
 
 ## Thematic labels
 
-
 ## Type labels
-
 
 ## Skills labels
 
-
 ## Size labels
-
 
 ## Difficulty labels
 
-
 ## Repository labels
-
 
 ## Stage labels
 
-
 ## Special labels
-
