--- a/src/content/docs/volunteering/coding/sprints.mdx
+++ b/src/content/docs/volunteering/coding/sprints.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 3
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 Joining a sprint is the easiest way to help out with BobaBoard's development.
 We're currently planning to onboard 3-4 new developers with each subsequent
