--- a/src/content/docs/volunteering/communications/editing-bobadocs.mdx
+++ b/src/content/docs/volunteering/communications/editing-bobadocs.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 1
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 This guide will show you how to edit boba-docs, the website that you're looking
 at _right now._
