--- a/src/content/docs/volunteering/community/our-bubbles.mdx
+++ b/src/content/docs/volunteering/community/our-bubbles.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 1
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 BobaBoard's volunteers collaborate using
 [a sociocratic concept called "circles"](https://www.sociocracyforall.org/organizational-circle-structure-in-sociocracy/).
