--- a/src/content/docs/volunteering/experience/intro.mdx
+++ b/src/content/docs/volunteering/experience/intro.mdx
@@ -2,7 +2,7 @@
 title: The Volunteer Experience™
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 ## Why Volunteer
 
