--- a/src/content/docs/volunteering/experience/volunteer-application.mdx
+++ b/src/content/docs/volunteering/experience/volunteer-application.mdx
@@ -1,7 +1,8 @@
 ---
 title: Apply to Volunteer
 ---
-import { Aside } from '@astrojs/starlight/components';
+
+import { Aside } from "@astrojs/starlight/components";
 
 import VolunteerNewsletterForm from "../../../../components/VolunteerNewsletterForm";
 
@@ -23,8 +24,8 @@ cultural fit for you.
   experience and interests, gender, sexuality, identity, skills and more
 - Comfortable with mentions of sex and sexuality as they happen within fandom
   spaces
-- Comfortable with swearing (directed at code, not people) and occasional suggestive
-  jokes or innuendo (not directed at specific volunteers)
+- Comfortable with swearing (directed at code, not people) and occasional
+  suggestive jokes or innuendo (not directed at specific volunteers)
 - Perseveres when things get difficult or stressful, but speaks up before their
   limits are passed or they aren't having a good time
 
@@ -39,8 +40,8 @@ cultural fit for you.
 - Thrives in a non-hierarchical environment where no one can **force** you (or
   others!) to complete tasks or change certain behaviors... or willing to ask
   for the support they need to do so
-- Communicates and advocates for themselves and is willing to put in the work
-  to help shape the space to meet their needs
+- Communicates and advocates for themselves and is willing to put in the work to
+  help shape the space to meet their needs
 
 ### Team Relationships
 
@@ -54,12 +55,14 @@ cultural fit for you.
 
 ## Apply to Volunteer
 
-Upcoming calls for volunteers will be put out through our volunteering newsletter. Please sign up and keep an eye out for opportunities that interest you!
+Upcoming calls for volunteers will be put out through our volunteering
+newsletter. Please sign up and keep an eye out for opportunities that interest
+you!
 
 <Aside type="caution">
 
-**All BobaBoard spaces are 18+ only.** If you're below that age, you'll be ineligible
-to volunteer. We'll be happy to have you once you're all grown up!
+**All BobaBoard spaces are 18+ only.** If you're below that age, you'll be
+ineligible to volunteer. We'll be happy to have you once you're all grown up!
 
 By signing up for the volunteering newsletter you certify you're of legal age.
 
@@ -71,19 +74,21 @@ By signing up for the volunteering newsletter you certify you're of legal age.
 
 ### Q: Do I need to apply for a specific role?
 
-Right now we're onboarding people based on teams. Since we do not have fixed roles,
-you will be able to move around and try on different tasks after your onboarding.
-You can learn more about how roles work in our organization in
+Right now we're onboarding people based on teams. Since we do not have fixed
+roles, you will be able to move around and try on different tasks after your
+onboarding. You can learn more about how roles work in our organization in
 [the BobaBoard Teams(s) page](../team/index.md).
 
 ### Q: What are the expectations for volunteers? What if my availability changes?
 
-We understand that life is complicated, and we strive to be flexible with expectations
-and commitments. Especially because many BobaBoard volunteers come from marginalized or
-underrepresented communities, shit often tends to unpredictably hit the fan.
+We understand that life is complicated, and we strive to be flexible with
+expectations and commitments. Especially because many BobaBoard volunteers come
+from marginalized or underrepresented communities, shit often tends to
+unpredictably hit the fan.
 
-If you have to walk back on a commitment made, we won't hold it against you. To learn
-more about volunteering expectations go [to the Volunteering in Practice page](in-practice.md).
+If you have to walk back on a commitment made, we won't hold it against you. To
+learn more about volunteering expectations go
+[to the Volunteering in Practice page](in-practice.md).
 
 ### Q: I signed up for volunteering but never received a reply!
 
