--- a/src/content/docs/volunteering/general/leading-a-retro.mdx
+++ b/src/content/docs/volunteering/general/leading-a-retro.mdx
@@ -2,7 +2,7 @@
 title: Leading a Retrospective
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 The retrospective lead helps facilitate the retrospective keeping it on track
 and on time. They also look out for any issues that might arise, redirecting the
