--- a/src/content/docs/development/boba-backend/apis/creating-endpoints.mdx
+++ b/src/content/docs/development/boba-backend/apis/creating-endpoints.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 2
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 An API `endpoint` is a URL clients can request to execute operations. Following
 REST principles, BobaBoard's server endpoints are grouped by the type of
