--- a/src/content/docs/development/boba-backend/testing.mdx
+++ b/src/content/docs/development/boba-backend/testing.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 6
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 You can run tests by using the `yarn run test:watch` command.
 
