--- a/src/content/docs/development/boba-frontend/queries-cache.mdx
+++ b/src/content/docs/development/boba-frontend/queries-cache.mdx
@@ -2,7 +2,7 @@
 title: Caching Queries
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 BobaBoard's frontend uses [React Query](https://react-query.tanstack.com/) as
 its query caching mechanism. See our knowledge base for basic information on
