--- a/src/content/docs/development/knowledge-base/intro.mdx
+++ b/src/content/docs/development/knowledge-base/intro.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 1
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 This section collects terms and concepts you're likely to encounter when
 developing for BobaBoard (and beyond).
