--- a/src/content/docs/users/self-hosting/bobaboard-installation.mdx
+++ b/src/content/docs/users/self-hosting/bobaboard-installation.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 2
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 <Aside type="caution">
 
