--- a/src/content/docs/users/self-hosting/server-setup.mdx
+++ b/src/content/docs/users/self-hosting/server-setup.mdx
@@ -455,8 +455,8 @@ In the final step of configuring your new NixOS server, you will:
 
 <Aside type="note">
 
-If you don't already have a `tailscale` account, you can quickly set one
-up [here](https://tailscale.com/pricing) for free. Tailscale allows you to do
+If you don't already have a `tailscale` account, you can quickly set one up
+[here](https://tailscale.com/pricing) for free. Tailscale allows you to do
 useful things like:
 
 - easily access your new server remotely
