--- a/src/content/docs/volunteering/experience/code-of-conduct.mdx
+++ b/src/content/docs/volunteering/experience/code-of-conduct.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 15
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 This guide goes over the code of conduct for BobaBoard's volunteers.
 
