--- a/src/content/docs/volunteering/team/index.mdx
+++ b/src/content/docs/volunteering/team/index.mdx
@@ -4,7 +4,7 @@ sidebar:
   order: 1
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+import { Aside } from "@astrojs/starlight/components";
 
 <Aside type="caution">
 
