fixed build errors.

--- a/src/content/docs/development/boba-backend/apis/testing-endpoints.mdx
+++ b/src/content/docs/development/boba-backend/apis/testing-endpoints.mdx
@@ -106,7 +106,7 @@ right parameters.
 `Mocks` used in boba-backend's testing include the `cache`, network requests
 (i.e. the `axios` library), and the authentication service.
 
-{/\* TODO: ## Testing boba-backend's API Routes
+{/* TODO: ## Testing boba-backend's API Routes
 
 https://www.npmjs.com/package/jest-extended
 
@@ -126,4 +126,4 @@ For more information, you can read
 1. add `jest.mock("../../../handlers/auth");`
 2. `setLoggedInUser`
 
-### How to test cache \*/}
+### How to test cache */}
