--- a/src/content/docs/development/boba-backend/permissions/testing-permissions.mdx
+++ b/src/content/docs/development/boba-backend/permissions/testing-permissions.mdx
@@ -11,6 +11,6 @@ granted to a user in the test database.
 
 {/* TODO: Test something by mocking a permission handler, then expand this section. */}
 
-{/\* TODO: ## Testing permission handlers
+{/* TODO: ## Testing permission handlers
 
-Write a test for a permission handler, then expand this section. \*/}
+Write a test for a permission handler, then expand this section. */}
