--- a/src/content/docs/project/features/identities/identity-management.mdx
+++ b/src/content/docs/project/features/identities/identity-management.mdx
@@ -4,6 +4,8 @@ sidebar:
   order: 1
 ---
 
+import { Aside } from "@astrojs/starlight/components";
+
 Identity management is one of the mechanisms that set BobaBoard apart from other
 social networks. In particular, rather than surfacing `user data` in its APIs,
 BobaBoard surfaces `identity data`.
