update volunteering guide sidebar.

--- a/src/content/docs/volunteering/experience/intro.mdx
+++ b/src/content/docs/volunteering/experience/intro.mdx
@@ -1,5 +1,7 @@
 ---
-title: The Volunteer Experience™
+title: Introduction
+sidebar:
+  order: 1
 ---
 
 import { Aside } from "@astrojs/starlight/components";
