--- a/src/content/docs/volunteering/general/adding-to-the-task-list.mdx
+++ b/src/content/docs/volunteering/general/adding-to-the-task-list.mdx
@@ -1,5 +1,7 @@
 ---
 title: Adding to the Task List
+sidebar:
+  order: 1
 ---
 
 This guide will break down how we capture tasks and task progress on our current
