--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,46 +1,38 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
-template: splash
-hero:
-  title: |
-    Welcome to Starlight with
-    <span
-      class="font-black text-transparent
-        bg-clip-text bg-gradient-to-b
-        from-accent-700 to-accent-400
-        dark:from-accent-500 dark:to-accent-200"
-    >
-      Tailwind
-    </span>
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
-  actions:
-    - text: Example Guide
-      link: /development/intro
-      icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
+title: Welcome to BobaBoard Docs
+topic: project # Needed for sidebar topic plugin to work if template is set to doc so sidebar will show on landing page
+template: doc
+tableOfContents: false
+lastUpdated: false
+pagefind: false
 ---
 
-import { Card, CardGrid } from "@astrojs/starlight/components";
+import { LinkCard, CardGrid } from "@astrojs/starlight/components";
 
-## Next steps
-
-<CardGrid stagger>
-  <Card title="Update content" icon="pencil">
-    Edit `src/content/docs/index.mdx` to see this page change.
-  </Card>
-  <Card title="Add new content" icon="add-document">
-    Add Markdown or MDX files to `src/content/docs` to create new pages.
-  </Card>
-  <Card title="Configure your site" icon="setting">
-    Edit your `sidebar` and other config in `astro.config.mjs`.
-  </Card>
-  <Card title="Read the docs" icon="open-book">
-    Learn more in [the Starlight Docs](https://starlight.astro.build/).
-  </Card>
+<CardGrid>
+  <LinkCard
+    title="Project Guide"
+    href="/project/intro"
+    description="Information on the BobaBoard's status and its features."
+  />
+  <LinkCard
+    title="Development Guide"
+    href="/development/intro"
+    description="How to develop BobaBoard on your local system."
+  />
+  <LinkCard
+    title="Volunteering Guide"
+    href="volunteering/experience/intro"
+    description="Interested in Volunteering? Start here."
+  />
+  <LinkCard
+    title="User Guide"
+    href="/users/intro"
+    description="Explore the BobaBoard user experience."
+  />
+  <LinkCard
+    title="REST API"
+    href="/api"
+    description="See all existing endpoints in the REST API for BobaBoard."
+  />
 </CardGrid>
