attempt to fix all internal links.

--- a/src/content/docs/development/boba-backend/apis/intro.mdx
+++ b/src/content/docs/development/boba-backend/apis/intro.mdx
@@ -31,7 +31,7 @@ about the REST principles followed by boba-backend in the
 <Aside type="tip">
 
 You can explore the full boba-backend API on the
-[REST API documentation page](/docs/development/rest-api/).
+[REST API documentation page](/api/).
 
 </Aside>
 
@@ -68,7 +68,7 @@ Response details (assuming success):
   [200 (success)](https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/200)
 - **HTTP Response payload:** what you see in the browser
 - **HTTP Response type:**
-  [See endpoint documentation](/docs/development/rest-api/#tag/realms/operation/getRealmsBySlug)
+  [See endpoint documentation](/development/rest-api/#tag/realms/operation/getRealmsBySlug)
 
 </details>
 
@@ -96,7 +96,7 @@ BobaBoard's API, the responses are returned in the
 and are just meant to help understand REST APIs.
 
 The source of truth for the boba-backend API is our
-[REST API documentation page](/docs/development/rest-api/).
+[REST API documentation page](/api/).
 
 </Aside>
 
