--- a/src/content/docs/development/boba-backend/using-postman.mdx
+++ b/src/content/docs/development/boba-backend/using-postman.mdx
@@ -16,7 +16,7 @@ tutorial. A sample BobaBoard URL to use is
 `http://localhost:4200/realms/slug/twisted-minds` with the `GET` HTTP method.
 
 You can find all the BobaBoard REST API endpoints in our
-[Rest API documentation](/docs/development/rest-api/).
+[Rest API documentation](/api/).
 
 <Aside type="note" title="Important">
 
