--- a/src/content/docs/users/how-to/threads.mdx
+++ b/src/content/docs/users/how-to/threads.mdx
@@ -108,7 +108,7 @@ types of posts.
   is especially useful in situations where the OP may be asking for certain
   conversations to stop or for certain content not to be placed in their thread.
   Please see
-  [Etiquette: Posting Guidelines](/docs/users/etiquette#posting-guidelines) for
+  [Etiquette: Posting Guidelines](/users/etiquette#posting-guidelines) for
   more information.
 
 - **New** - the red NEW badge identifies new threads, comments, and
