--- a/src/content/docs/users/v0/index.mdx
+++ b/src/content/docs/users/v0/index.mdx
@@ -27,7 +27,7 @@ about, check out the below information to see if V0 might be a good fit.
 The v0 realm is open for NSFW materials to be posted everywhere; it is not
 constrained to a single board. Please use caution when viewing boards and be
 sure to read
-[content notices and other indicators](/docs/users/howto/tagging#cn) carefully.
+[content notices and other indicators](/users/howto/tagging#cn) carefully.
 Although members often use content notices and spoilers as a courtesy, **this is
 voluntary** and their use is not required or enforced/moderated.
 
@@ -43,13 +43,13 @@ up with bugs, weird behaviors, and occasional site breakages, but who are also
 
 In general, V0 users need to be okay with managing their own risk - i.e. muting
 threads or boards that contain things they don't want to see, actively avoid
-[content notices](/docs/users/howto/tagging#cn) that might trigger or squick
+[content notices](/users/howto/tagging#cn) that might trigger or squick
 them, and who are willing to handle not being able to filter or block certain
 tags or content. Quality of life features like filtering and blocking are on the
 way, but have taken a backseat to things like moderation tools for Realms.
 
 V0 users should also be able to follow the
-[General BobaBoard Etiquette](/docs/users/etiquette) without needing intense
+[General BobaBoard Etiquette](/users/etiquette) without needing intense
 moderator oversight. That doesn't mean that moderation **never** happens, but it
 does mean that users need to be self-aware enough to make sure they aren't
 crossing lines and escalating situations without meaning to.
@@ -66,7 +66,7 @@ If this all sounds like a good fit, feel free to ask for an invite.
 ### How to Get an Invite
 
 Please email the realm admin listed for V0 on the
-[Realm Admins](/docs/users/admins) page. Please be sure to include the Realm
+[Realm Admins](/users/admins) page. Please be sure to include the Realm
 name (VO) and an email you want to have the invite sent to (particularly if it's
 different than the one you're emailing from!).
 
