--- a/src/content/docs/development/boba-backend/apis/creating-endpoints.mdx
+++ b/src/content/docs/development/boba-backend/apis/creating-endpoints.mdx
@@ -173,7 +173,7 @@ available
 During development, you can preview your documentation by opening
 `http://localhost:4200/api-docs/` in your browser. Oce the updated server is
 deployed to production, the documentation will be automatically available
-[on this same website](/docs/development/rest-api/).
+[on this same website](/api/).
 
 The generated OpenAPI JSON spec is available at the `/open-api.json` endpoint.
 
