--- a/src/content/docs/development/boba-backend/permissions/check-permissions.mdx
+++ b/src/content/docs/development/boba-backend/permissions/check-permissions.mdx
@@ -97,7 +97,7 @@ router.get("feeds/boards/:board_id", ensureBoardAccess, async (req, res) => {
 
 Each board's metadata includes the user's permission for the board and all
 threads and posts contained within. See the
-[`boards/{board_id}`](/docs/development/rest-api/#operation/getBoardsByUuid)
+[`boards/{board_id}`](/api/#operation/getBoardsByUuid)
 endpoint for details.
 
 {/* TODO: Create documentation about checking permissions on the client and add a link here. */}
