--- a/src/content/docs/users/status.mdx
+++ b/src/content/docs/users/status.mdx
@@ -50,4 +50,4 @@ You can provide feedback by:
 
 - posting in the **!bobaland** Board for your Realm
 - opening a [Github Issue](https://github.com/BobaBoard/issues/issues)
-- becoming a [volunteer](/docs/volunteering)
+- becoming a [volunteer](/volunteering)
